manifests/frontend/frontend_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: chaewonzz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: aksaz01devvvd01registry.azurecr.io/lcwon/chae_vue_crud_security:master
          ports:
            - containerPort: 80
